# quanta-universe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CATALOG.json  CHANGELOG.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  ENGINEERING.md  LINEAGE.md  README.md  STATUS.md  UNIVERSE.toml  USAGE.md  build.quanta  main.bld  main.quanta  quanta-v4.2.0  test_self.quanta  test_simple.quanta  todo.md
calibrate/: =6.0.0  LICENSE  README.md  ROADMAP.md  ROADMAP_STATE_OF_THE_ART.md  advanced_test.html  advanced_verification.py  calibrate_monitors.py  calibrate_pro.spec  lib.bld  lib.quanta  main.bld  main.quanta  neuralux_precision.py  pyproject.toml  requirements.txt  test_full_workflow.py  test_pattern.html  verify_calibration.py
calibrate/calibrate_pro/: __init__.py  __main__.py  app.py  main.py
calibrate/calibrate_pro/advanced/: __init__.py  ambient_light.py  automation.py  demo.py  lut_optimization.py  network_calibration.py  uniformity.py
calibrate/calibrate_pro/calibration/: __init__.py  ccss_import.py  hybrid.py  multi_display.py  native_loop.py  targets.py
calibrate/calibrate_pro/community/: __init__.py  database.py
calibrate/calibrate_pro/core/: __init__.py  aces.py  calibration_engine.py  color_math.py  color_models.py  icc_profile.py  lut_engine.py  lut_engine_advanced.py  vcgt.py
calibrate/calibrate_pro/display/: __init__.py  color_volume.py  hdr_content.py  hdr_detect.py  oled.py  scrgb_pipeline.py  uniformity.py
calibrate/calibrate_pro/gui/: __init__.py  app.py  calibration_details.py  calibration_test.py  calibration_wizard.py  display_selector.py  hdr_calibration.py  lut_preview.py  main_window_backup.py  measurement_view.py  pattern_window.py  professional_calibration.py  profile_manager.py  report_viewer.py
calibrate/calibrate_pro/gui/pages/: calibrate.py  ddc_control.py  profiles.py  settings.py  verify.py
calibrate/calibrate_pro/gui/widgets/: __init__.py  cie_diagram.py  color_swatch.py  delta_e_chart.py  gamma_curve.py
calibrate/calibrate_pro/hardware/: __init__.py  argyll_backend.py  colorimeter_base.py  ddc_ci.py  drift_compensation.py  hardware_calibration.py  i1d3_native.py  i1display.py  i1display_native.py  measurement.py  native_backend.py  sensorless_calibration.py  spectro.py  spyder.py  spyder_native.py  usb_device.py  warmup_monitor.py
calibrate/calibrate_pro/hdr/: __init__.py  dolby_vision.py  eotf_calibration.py  hdr10plus.py  hdr_calibration.py  hlg.py  mastering_standards.py  pq_st2084.py  tone_mapping.py
calibrate/calibrate_pro/integrations/: __init__.py  resolve.py
calibrate/calibrate_pro/lut_system/: __init__.py  amd_api.py  color_loader.py  dwm_lut.py  intel_api.py  lut_formats.py  nvidia_api.py  per_display_calibration.py  vcgt_calibration.py
calibrate/calibrate_pro/panels/: __init__.py  database.py  detection.py
calibrate/calibrate_pro/patterns/: __init__.py  display.py
calibrate/calibrate_pro/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
calibrate/calibrate_pro/plugins/: __init__.py  manager.py
calibrate/calibrate_pro/profiles/: __init__.py  icc_v4.py  mhc2.py  profile_installer.py  vcgt.py
calibrate/calibrate_pro/sensorless/: __init__.py  auto_calibration.py  camera_calibration.py  neuralux.py  pattern_generator.py  visual_matcher.py
calibrate/calibrate_pro/services/: __init__.py  ambient_light.py  app_switcher.py  calibration_guard.py  drift_monitor.py  gamut_clamp.py
calibrate/calibrate_pro/startup/: __init__.py  calibration_loader.py  lut_autoload.py
calibrate/calibrate_pro/targets/: __init__.py  gamma.py  gamut.py  luminance.py  whitepoint.py
calibrate/calibrate_pro/tray/: __init__.py  tray_app.py
calibrate/calibrate_pro/utils/: __init__.py  auto_calibration.py  startup_manager.py
calibrate/calibrate_pro/verification/: __init__.py  colorchecker.py  gamut_volume.py  grayscale.py  measured_verify.py  patch_sets.py  report_generator.py  reports.py
calibrate/docs/: INDUSTRY_FEATURES.md  TECHNICAL.md  UI_ROADMAP.md
calibrate/scripts/: ccmx_calibration_loop.py  ccmx_chroma_adaptive.py  ccmx_verification.py  hybrid_measure.py  native_calibration_loop.py  native_calibration_loop_v2.py  native_colorchecker.py  native_iterative_refine.py  unlock_measure.py  vcgt_measure.py
calibrate/tests/: conftest.py  test_auto_calibration.py  test_color_math.py  test_lut_engine.py  test_native_loop.py  test_panel_database.py  test_verification.py
photon/frametrace/: Cargo.toml  README.md
photon/frametrace/c_demo/: build.bat
photon/frametrace/examples/: replay_trace.rs  restore_verify.rs  ssr_hazard.rs
photon/frametrace/hook/: build.bat  frametrace_hook.cpp
photon/frametrace/include/: frametrace.h
photon/frametrace/src/: ffi.rs  lib.rs  state.rs  trace.rs
photon/frametrace/tests/: ffi_abi.rs  hazards.rs  restore_verify.rs  trace.rs
photon/frametrace/tests/data/: ssr_trace.json
photon/src/: Cargo.toml  error.rs  hook.rs  lib.rs
photon/src/dx11/: mod.rs  vtable.rs
quantaos/bootloader/: Cargo.toml  rust-toolchain.toml
quantaos/bootloader/.cargo/: config.toml
quantaos/bootloader/src/: main.rs
quantaos/kernel/: Cargo.toml  build_log.txt  rust-toolchain.toml  x86_64-quantaos.json
quantaos/kernel/.cargo/: config.toml
quantaos/kernel/src/: ai.rs  boot.rs  context.rs  elf.rs  fs.rs  gdt.rs  healing.rs  interrupts.rs  ipc_old.rs.bak  lib.rs  log.rs  math.rs  scheduler_old.rs.bak  syscall.rs  syscall_entry.rs  time.rs
quantaos/kernel/src/bluetooth/: a2dp.rs  hci.rs  hid.rs  l2cap.rs  mod.rs  rfcomm.rs  sdp.rs  smp.rs
quantaos/kernel/src/bpf/: helpers.rs  jit.rs  maps.rs  mod.rs  programs.rs  verifier.rs
quantaos/kernel/src/cgroups/: cpu.rs  devices.rs  freezer.rs  io.rs  memory.rs  mod.rs  pids.rs
quantaos/kernel/src/cpu/: hotplug.rs  io.rs  mod.rs  smp.rs
quantaos/kernel/src/crypto/: aead.rs  af_alg.rs  cipher.rs  hash.rs  kdf.rs  mac.rs  mod.rs  rng.rs
quantaos/kernel/src/debug/: breakpoint.rs  mod.rs  registers.rs  watchpoint.rs
quantaos/kernel/src/dm/: dm_core.rs  linear.rs  lvm.rs  mod.rs  snapshot.rs  stripe.rs  table.rs  (+2 more)
quantaos/userspace/coreutils/: Cargo.toml
(+1089 files in other folders)
