# ═══════════════════════════════════════════════════════════════════════════════
# PHOTON - Universal Graphics Hook Framework
# ═══════════════════════════════════════════════════════════════════════════════
# Copyright © 2024-2025 Zain Dana Harper. All Rights Reserved.
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "photon-hook"
version = "1.0.0"
edition = "2021"
authors = ["Zain Dana Harper"]
description = "Universal Graphics Hook Framework - DX9/DX10/DX11/DX12/Vulkan/OpenGL"
license = "Proprietary"
repository = "https://github.com/quantauniverse/photon"

[lib]
name = "photon_hook"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
]}

# Hooking library
minhook = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"

# Synchronization
parking_lot = "0.12"
once_cell = "1.19"

# Memory utilities
memoffset = "0.9"

[dev-dependencies]
# Testing
serial_test = "3.0"

[build-dependencies]
# Build script dependencies (if needed)

[features]
default = ["dx11"]
dx9 = []
dx10 = []
dx11 = []
dx12 = []
vulkan = []
opengl = []
all-apis = ["dx9", "dx10", "dx11", "dx12", "vulkan", "opengl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
