# ===============================================================================
# QUANTAOS BOOTLOADER
# ===============================================================================
# Copyright (c) 2024-2025 Zain Dana Harper. All Rights Reserved.
# ===============================================================================

[package]
name = "quantaos-bootloader"
version = "2.0.0"
edition = "2021"
authors = ["Zain Dana Harper"]
license = "Proprietary"
description = "UEFI bootloader for QuantaOS"

[dependencies]
uefi = "0.31"
uefi-raw = "0.8"
log = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[build-dependencies]
